package com.andrew.blog.entities;

public enum Mascot {
	CAPYBARA,
	LEMUR,
	OCTOPUS,
	RED_PANDA,
	CHAMELEON,
	OWL,
	PENGUIN
}
